--- a/static/assets/css/index.css
+++ b/static/assets/css/index.css
@@ -31,21 +31,37 @@ hr {
   background: #CAB400;
 }
 
-#about {
+#head {
   overflow: hidden;
   height: 100vh;
 }
 
-canvas {
+#canvas, #canvas2 {
   z-index: -999;
   display: block;
   position: fixed;
   top: 0;
   left: 0;
 }
+#canvasWave {
+  z-index: -99;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#about {
+  height: 50vh;
+  background-color: #222;
+}
 
 #works {
-  background-color: rgba(0,0,0,0.8);
+  background-color: #666;
+}
+
+#works .row {
+  margin: 0 20%;
 }
 #works .work-block {
   background-color: rgba(0,0,0,0.5);
@@ -64,7 +80,7 @@ canvas {
   padding-top: 100%;
   padding-left: 100%;
   transition: .3s;
-  filter: grayscale(100%);
+  filter: grayscale(80%);
 }
 #works .work-block:hover .img-block {
   filter: grayscale(0%);
@@ -80,7 +96,17 @@ canvas {
   text-decoration: none;
 }
 
+
+@media (max-width: 992px) {
+  #works .row {
+    margin: 0 15%;
+  }
+}
+
 @media (max-width: 767px) {
+  #works .row {
+    margin: 0;
+  }
   #works .work-block .img-block {
     filter: grayscale(0%);
   }
