--- a/src/footer.pug
+++ b/src/footer.pug
@@ -1,3 +1,7 @@
+#footer.text-center.bg-dark.py-3
+  a(href="https://makebackground.io") makebackground.io
+  a(href="https://railustre.tw") 光軌創曳工作室
+
 script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous")
 script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous")
 script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous")
@@ -13,4 +17,8 @@ script.
     
     $(window).on('activate.bs.scrollspy', function (e,obj) {
     });
+  });
+  
+  $(window).scroll(function(){
+    $("#about, #works").css({"background-position": `center ${$(this).scrollTop()/20}px`})
   });
