--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -53,11 +53,22 @@ hr {
 
 #about {
   height: 50vh;
-  background-color: #222;
+  background-image: url("/assets/img/Network.png");
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+#about .row {
+  background-color: #000A;
 }
 
 #works {
-  background-color: #666;
+  background-image: url("/assets/img/Waves.png");
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 #works .row {
@@ -80,7 +91,7 @@ hr {
   padding-top: 100%;
   padding-left: 100%;
   transition: .3s;
-  filter: grayscale(80%);
+  filter: grayscale(100%);
 }
 #works .work-block:hover .img-block {
   filter: grayscale(0%);
@@ -96,6 +107,15 @@ hr {
   text-decoration: none;
 }
 
+#footer {
+  width: 100%;
+}
+
+#footer a {
+  margin: 5px;
+  padding: 5px 10px;
+  color: #AAA;
+}
 
 @media (max-width: 992px) {
   #works .row {
