--- a/src/footer.pug
+++ b/src/footer.pug
@@ -1,7 +1,17 @@
-#footer.text-center.bg-dark.py-3
-  a(href="https://makebackground.io") makebackground.io
-  a(href="https://railustre.tw") 光軌創曳工作室
-
+#footer.text-center.bg-dark.container-fluid
+  .row.py-3.justify-content-center
+    .col-md-4
+      h5 相關連結 / Links
+      a(href="https://railustre.tw" target="_blank") 光軌創曳工作室
+      br
+      a(href="https://makebackground.io" target="_blank") background images are created by makebackground.io
+    .col-md-4
+      h5 聯絡我們 / Contacts
+      a 高任翔 | SeanGau
+      br
+      a rrtw0627@gmail.com
+      br
+      a +886 975722611
 script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous")
 script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous")
 script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous")
