--- a/src/nav.pug
+++ b/src/nav.pug
@@ -9,3 +9,4 @@ nav#navbar.navbar.navbar-expand-md.navbar-dark.bg-dark.sticky-top
     ul.navbar-nav.ml-auto
       +navli("#about", "about us")
       +navli("#works", "our works")
+      +navli("#footer", "contacts")
