--- a/src/header.pug
+++ b/src/header.pug
@@ -1,8 +1,17 @@
 head
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  script(async src="https://www.googletagmanager.com/gtag/js?id=G-G28VSKXZKS")
+  script.
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-G28VSKXZKS');
+  
   meta(charset="UTF-8")
   meta(name="viewport", content="width=device-width, initial-scale=1.0")
   meta(http-equiv="X-UA-Compatible", content="ie=edge")
   meta(property="og:title" content="位元創意")
+  meta(property="og:image" content="/assets/img/Waves.png")
   title 位元創意
   link(rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico")
   link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous")
