--- a/src/header.pug
+++ b/src/header.pug
@@ -12,7 +12,8 @@ head
   meta(http-equiv="X-UA-Compatible", content="ie=edge")
   meta(property="og:title" content="位元創意")
   meta(property="og:image" content="/assets/img/Waves.png")
-  title 位元創意
+  title 位元創意 - 資訊整合、系統開發、展場設計、演出裝置設計
+  meta(name="description" content="a bit of creative, create bytes of life. 「位元創意」成立於2020秋冬之際，主要業務為資訊整合、系統開發、展場及演出裝置設計開發等")
   link(rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico")
   link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous")
   link(href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;700&family=Noto+Serif+TC:wght@300;500;700&display=swap" rel="stylesheet")
