--- a/src/nav.pug
+++ b/src/nav.pug
@@ -1,12 +1,21 @@
 nav#navbar.navbar.navbar-expand-md.navbar-dark.bg-dark.sticky-top
-  a.navbar-brand(href="/") 位元創意
+  a.navbar-brand(href="/")    
+    | 位元創意
   button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation")
     span.navbar-toggler-icon
   #navbarNav.collapse.navbar-collapse
     mixin navli(_href, _title)
       li.nav-item
         a.nav-link(href=_href)= _title
-    ul.navbar-nav.ml-auto
-      +navli("#about", "about us")
-      +navli("#works", "our works")
+    ul.navbar-nav
+      if _home
+        +navli("#about", "about us")
+        +navli("#works", "our works")
+      else
+        +navli("/#about", "about us")
+        +navli("/#works", "our works")        
       +navli("#footer", "contacts")
+      li.nav-item.dropdown
+        a.nav-link.dropdown-toggle(href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") services
+        .dropdown-menu.bg-dark(aria-labelledby="navbarDropdownMenuLink")
+          a.dropdown-item.text-light(href="/livestream") 直播技術
