edit home style

--- a/src/footer.pug
+++ b/src/footer.pug
@@ -1,4 +1,4 @@
-#footer.text-center.bg-dark.container-fluid
+#footer.text-center.bg-light.container-fluid
   .row.py-3.justify-content-center
     .col-md-4
       h5 相關連結 / Links
