--- a/src/livestream/index.pug
+++ b/src/livestream/index.pug
@@ -3,10 +3,10 @@ html(lang="zh-Hant-TW")
   include ../header.pug
   link(rel="stylesheet" href="/assets/css/base.css")
   link(rel="stylesheet" href="/assets/css/services.css")
-  body
+  body.bg-dark
     include ../nav.pug
     .container
-      .bg-dark-transparent.p-4
+      .bg-dark-transparent.p-4.text-light
         h1 直播技術
         p.
           位元創意提供最實惠的直播技術支援服務，至今已有數十場活動、講座、線上會議直播經驗，並擁有完善的直播設備，
