--- a/src/nav.pug
+++ b/src/nav.pug
@@ -1,4 +1,4 @@
-nav#navbar.navbar.navbar-expand-md.navbar-dark.bg-dark.sticky-top
+nav#navbar.navbar.navbar-expand-md.navbar-light.bg-light.sticky-top
   a.navbar-brand(href="/")    
     | 位元創意
   button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation")
@@ -17,5 +17,5 @@ nav#navbar.navbar.navbar-expand-md.navbar-dark.bg-dark.sticky-top
       +navli("#footer", "contacts")
       li.nav-item.dropdown
         a.nav-link.dropdown-toggle(href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") services
-        .dropdown-menu.bg-dark(aria-labelledby="navbarDropdownMenuLink")
-          a.dropdown-item.text-light(href="/livestream") 直播技術
+        .dropdown-menu(aria-labelledby="navbarDropdownMenuLink")
+          a.dropdown-item(href="/livestream") 直播技術
