--- a/static/assets/css/base.css
+++ b/static/assets/css/base.css
@@ -1,16 +1,14 @@
 body {
   font-family: 'Noto Sans TC', sans-serif;
-  background-color: #000;
-  color: #FFF;
 }
 a, h1, h2, h3, h4, h5, h6 {
   font-family: 'Noto Serif TC', serif;
 }
 p {
-  color: #AAA;
+  color: #666;
   word-break: break-all;
 }
-hr {
+.bg-dark hr {
   border-color: rgba(255,255,255,0.2);
 }
 
@@ -39,7 +37,7 @@ hr {
 #footer a {
   margin: 5px;
   padding: 5px 10px;
-  color: #AAA;
+  color: #666;
 }
 
 .bg-dark-transparent {
