--- a/src/footer.pug
+++ b/src/footer.pug
@@ -10,8 +10,6 @@
       a 高任翔 | SeanGau
       br
       a sean@b1t.tw
-      br
-      a +886 975722611
 script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous")
 script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous")
 script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous")
@@ -31,5 +29,5 @@ script.
   });
   
   $(window).scroll(function(){
-    $("#about, #works").css({"background-position": `center ${-$(this).scrollTop()/5}px`})
+    $("#about").css({"background-position": `center ${-$(this).scrollTop()/5}px`})
   });
