--- a/src/index.pug
+++ b/src/index.pug
@@ -16,34 +16,18 @@ html(lang="zh-Hant-TW")
           //h4 a bit of creative, create bytes of life
     
     .container-fluid#about
-      .row.h-100.align-items-center.justify-content-center
+      .row.align-items-center.justify-content-center
         .col-md-8
           p.p-2.text-center 
             | 「位元創意」成立於2020秋冬之際，前身為專注於led道具開發之工作室「光軌創曳」，不斷在藝術、設計與電機、資訊領域間找尋平衡，有豐富的藝創合作經驗，
             | 主要業務為資訊整合、直播技術、展場及演出裝置設計開發等
-    .container-fluid.p-2#works
-      mixin work(val)
-        .col-md-4.p-2
-          if val['link']
-              .work-block.p-2.h-100
-                a(href=val['link'] target="_blank")
-                  .img-block(style="background-image: url(/assets/img/"+val['image']+");")
-                  p #{val['brief']}
-          else
-            .work-block.p-2.h-100
-              .img-block(style="background-image: url(/assets/img/"+val['image']+");")
-              p #{val['brief']}    
-      hr
-      h1.text-center With Arts
-      hr            
-      .row.rwd-row.mb-5
-        each val, index in _work_data["arts"]
-          +work(val)
-      hr
-      h1.text-center With Techs
-      hr            
-      .row.rwd-row.mb-5
-        each val, index in _work_data["techs"]
-          +work(val)
+      .row.align-items-center.justify-content-center
+        .col-md-4.text-center.p-2
+          a(href="creative")
+            .service-block(style="background-image: url(/assets/img/creative/longci.jpg)") 藝創合作
+        .col-md-4.text-center.p-2
+          a(href="livestream")
+            .service-block(style="background-image: url(/assets/img/livestream/4.jpg)") 直播技術
+          
     include footer.pug
     //script(src="/assets/js/matrix.js")
