--- a/src/livestream/index.pug
+++ b/src/livestream/index.pug
@@ -2,7 +2,7 @@
 html(lang="zh-Hant-TW")
   include ../header.pug
   link(rel="stylesheet" href="/assets/css/base.css")
-  link(rel="stylesheet" href="/assets/css/services.css")
+  link(rel="stylesheet" href="/assets/css/livestream.css")
   body.bg-dark
     include ../nav.pug
     .container
@@ -15,15 +15,17 @@ html(lang="zh-Hant-TW")
         p ※以下皆為直播畫面擷取
         .carousel-inner
           .carousel-item.active
-            img.d-block.w-100(src='/assets/img/livestream/1.jpg')
+            img.d-block.w-100(src='/assets/img/livestream/1.jpg' alt="好菜上桌-田調X策展培力講座")
           .carousel-item
-            img.d-block.w-100(src='/assets/img/livestream/2.jpg')
+            img.d-block.w-100(src='/assets/img/livestream/2.jpg' alt="想像中的國度：臺灣與拉丁美洲的交往")
           .carousel-item
             img.d-block.w-100(src='/assets/img/livestream/3.jpg')
           .carousel-item
             img.d-block.w-100(src='/assets/img/livestream/4.jpg')
           .carousel-item
             img.d-block.w-100(src='/assets/img/livestream/5.jpg')
+          .carousel-item
+            img.d-block.w-100(src='/assets/img/livestream/6.jpg' alt="「求你政經點」：不是政論節目，是台泰越藝術生態交流論")
         a.carousel-control-prev(href='#carousel', role='button', data-slide='prev')
           span.carousel-control-prev-icon(aria-hidden='true')
           span.sr-only Previous
