--- a/static/assets/css/index.css
+++ b/static/assets/css/index.css
@@ -19,7 +19,6 @@
 }
 
 #about {
-  height: 50vh;
   background-image: url("/assets/img/Network.png");
   background-position: center;
   background-repeat: repeat;
@@ -29,57 +28,32 @@
 }
 #about .row {
   background-color: #000A;
+  min-height: 10em;
 }
 #about p {
-  color: #FFF;
 }
-
-#works {
-  background-image: url("/assets/img/Waves_w.png");
+#about .row .service-block {
   background-position: center;
   background-repeat: repeat;
   background-size: cover;
-  background-attachment: fixed;
-}
-#works .work-block {
-  background-color: rgba(0,0,0,0.5);
-  border: 1px solid #666;
-  transition: .3s;
-}
-#works .work-block:hover {
-  background-color: rgba(0,0,0,1);
-  border: 1px solid #AAA;
-}
-#works .work-block .img-block {
-  background-position: center;
-  background-size: cover;
-  height: 0;
-  width: 0;
-  padding-top: 100%;
-  padding-left: 100%;
-  transition: .3s;
-  filter: grayscale(100%);
-}
-#works .work-block:hover .img-block {
-  filter: grayscale(0%);
-}
-#works .work-block p {
+  font-size: 2em;
+  height: 4em;
+  line-height: 4em;
+  border: 1px solid white;
+  opacity: 0.6;
   color: #FFF;
-  margin: 1em;
   transition: .3s;
+  margin-bottom: .5em;
 }
-#works .work-block:hover a {
+#about .row .service-block:hover {
+opacity: 1;
+}
+#about .row a:hover {
   text-decoration: none;
-}
-#works .work-block a:hover {
-  text-decoration: none;
-}
-
-@media (max-width: 992px) {
 }
 
 @media (max-width: 767px) {
-  #works .work-block .img-block {
-    filter: grayscale(0%);
+  #about .row .service-block {
+    opacity: 1;
   }
 }
