--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -5,7 +5,7 @@ a, h1, h2, h3, h4, h5, h6 {
   font-family: 'Noto Serif TC', serif;
 }
 p {
-  color: #666;
+  color: #FFF;
   word-break: break-all;
 }
 .bg-dark hr {
