--- a/src/index.pug
+++ b/src/index.pug
@@ -18,16 +18,16 @@ html(lang="zh-Hant-TW")
     .container-fluid#about
       .row.align-items-center.justify-content-center
         .col-md-8
-          p.p-2.text-center 
+          p.p-4.m-0.text-center 
             | 「位元創意」成立於2020秋冬之際，前身為專注於led道具開發之工作室「光軌創曳」，不斷在藝術、設計與電機、資訊領域間找尋平衡，有豐富的藝創合作經驗，
             | 主要業務為資訊整合、直播技術、展場及演出裝置設計開發等
       .row.align-items-center.justify-content-center
         .col-md-4.text-center.p-2
           a(href="creative")
-            .service-block(style="background-image: url(/assets/img/creative/longci.jpg)") 藝創合作
+            .service-block(style="background-image: url(/assets/img/creative/longci.jpg)"): b 藝創合作
         .col-md-4.text-center.p-2
           a(href="livestream")
-            .service-block(style="background-image: url(/assets/img/livestream/4.jpg)") 直播技術
+            .service-block(style="background-image: url(/assets/img/livestream/4.jpg)"): b 直播技術
           
     include footer.pug
     //script(src="/assets/js/matrix.js")
