--- a/src/creative/index.pug
+++ b/src/creative/index.pug
@@ -6,8 +6,8 @@ html(lang="zh-Hant-TW")
   link(rel="stylesheet" href="/assets/css/creative.css")
   body.bg-dark
     include ../nav.pug
-    .container
-      .bg-dark-transparent.p-4.text-light
+    .container.text-light
+      .bg-dark-transparent.p-4
         h1 藝創合作
         p.
           從光軌創曳開始，除開發高階led表演道具、相關系統軟體，也與多位藝術家合作，協助展覽現場技術支援，包括影像同步播放技術、動態感應裝置等，
