--- a/static/assets/css/creative.css
+++ b/static/assets/css/creative.css
@@ -41,8 +41,13 @@ body {
 .modal-header {
   border: 0;
 }
-.modal img {
-  width: 100%;
+.modal .carousel-item {
+  background-position: center;
+  background-size: cover;
+  height: 0;
+  width: 0;
+  padding-top: 56%;
+  padding-left: 100%;
 }
 .modal p {
   text-align: justify;
