--- a/src/header.pug
+++ b/src/header.pug
@@ -1,3 +1,4 @@
+- _creatives = creatives
 head
   <!-- Global site tag (gtag.js) - Google Analytics -->
   script(async src="https://www.googletagmanager.com/gtag/js?id=G-G28VSKXZKS")
@@ -18,3 +19,6 @@ head
   link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous")
   link(href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;700&family=Noto+Serif+TC:wght@300;500;700&display=swap" rel="stylesheet")
   link(href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet")
+  each val, key in _creatives
+    each img, index2 in _creatives[key]
+      link(rel="preload" href="/assets/img/creative/"+key+"/"+img as="image")
