--- a/src/livestream/index.pug
+++ b/src/livestream/index.pug
@@ -44,21 +44,26 @@ html(lang="zh-Hant-TW")
             th(scope="row") 講座直播
             td 1導播、1固定鏡位、投影畫面擷取、現場音訊擷取
             td 6,000元
-            td 8小時(內)
+            td 4小時(內)
           tr
             th(scope="row") 活動直播
             td 1導播、2固定鏡位、投影畫面擷取、現場音訊擷取
-            td 10,000元
-            td 8小時(內)
+            td 14,000元
+            td 4小時(內)
           tr
             th(scope="row") 活動直播
             td 1導播、1固定鏡位、1移動鏡位、投影畫面擷取、現場音訊擷取
-            td 15,000元
-            td 8小時(內)
+            td 18,000元
+            td 4小時(內)
+          tr
+            th(scope="row") 活動直播
+            td 1導播、2固定鏡位、1移動鏡位、投影畫面擷取、現場音訊擷取
+            td 22,000元
+            td 4小時(內)
           tr
             th(scope="row") 線上會議直播
-            td 1導播、1固定鏡位、會議畫面擷取、現場音訊擷取
-            td 18,000元
+            td 1導播、1固定鏡位、線上會議畫面擷取、現場音訊擷取
+            td 22,000元
             td 4小時(內)
           tr
             th(scope="row") 更多服務
