--- a/src/livestream/index.pug
+++ b/src/livestream/index.pug
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 html(lang="zh-Hant-TW")
   include ../header.pug
+  title 位元創意 - 直播技術
   link(rel="stylesheet" href="/assets/css/base.css")
   link(rel="stylesheet" href="/assets/css/livestream.css")
   body.bg-dark
@@ -15,17 +16,29 @@ html(lang="zh-Hant-TW")
         p ※以下皆為直播畫面擷取
         .carousel-inner
           .carousel-item.active
-            img.d-block.w-100(src='/assets/img/livestream/1.jpg' alt="好菜上桌-田調X策展培力講座")
+            img.d-block.w-100(src='/assets/img/livestream/1.jpg')
+            .carousel-caption.d-none.d-md-block
+              h5 2021思辨之夜-後疫情時代生活指南
           .carousel-item
-            img.d-block.w-100(src='/assets/img/livestream/2.jpg' alt="想像中的國度：臺灣與拉丁美洲的交往")
+            img.d-block.w-100(src='/assets/img/livestream/2.jpg')
+            .carousel-caption.d-none.d-md-block
+              h5 2021思辨之夜-後疫情時代生活指南
           .carousel-item
             img.d-block.w-100(src='/assets/img/livestream/3.jpg')
+            .carousel-caption.d-none.d-md-block
+              h5 想像中的國度：臺灣與拉丁美洲的交往
           .carousel-item
             img.d-block.w-100(src='/assets/img/livestream/4.jpg')
+            .carousel-caption.d-none.d-md-block
+              h5 好菜上桌-田調X策展培力講座
           .carousel-item
             img.d-block.w-100(src='/assets/img/livestream/5.jpg')
+            .carousel-caption.d-none.d-md-block
+              h5 竹圍工作室秋季開放日─藝術家座談
           .carousel-item
-            img.d-block.w-100(src='/assets/img/livestream/6.jpg' alt="「求你政經點」：不是政論節目，是台泰越藝術生態交流論")
+            img.d-block.w-100(src='/assets/img/livestream/6.jpg')
+            .carousel-caption.d-none.d-md-block
+              h5 「求你政經點」：不是政論節目，是台泰越藝術生態交流論
         a.carousel-control-prev(href='#carousel', role='button', data-slide='prev')
           span.carousel-control-prev-icon(aria-hidden='true')
           span.sr-only Previous
@@ -70,7 +83,7 @@ html(lang="zh-Hant-TW")
             td(colspan="3") 流程規劃、額外時數等請聯絡洽詢
       .bg-dark-transparent.p-4
         p ※以上服務均提供直播畫面錄影，於活動結束後提供一完整錄影檔
-        p ※出班人數依規模而定，基本為1-2人
+        p ※出班人數依規模而定，基本為2人
         p ※以上價格皆含稅並開立統一發票
     hr
     include ../footer.pug
