--- a/src/index.pug
+++ b/src/index.pug
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 html(lang="zh-Hant-TW")
   include header.pug
+  title 位元創意 - 資訊整合、直播技術、展場設計、演出裝置設計
   link(rel="stylesheet" href="/assets/css/base.css")
   link(rel="stylesheet" href="/assets/css/index.css")
   body(data-spy="scroll" data-target=".navbar" data-offset="100")
@@ -26,7 +27,7 @@ html(lang="zh-Hant-TW")
             .service-block(style="background-image: url(/assets/img/creative/longci.jpg)"): b 藝創合作
         .col-md-4.text-center.p-2
           a(href="livestream")
-            .service-block(style="background-image: url(/assets/img/livestream/4.jpg)"): b 直播技術
+            .service-block(style="background-image: url(/assets/img/livestream/1.jpg)"): b 直播技術
           
     include footer.pug
     //script(src="/assets/js/matrix.js")
