--- a/src/webdesign/index.pug
+++ b/src/webdesign/index.pug
@@ -3,14 +3,14 @@
 <!DOCTYPE html>
 html(lang="zh-Hant-TW")
   include ../header.pug
-  title 位元創意 - 藝創合作
+  title 位元創意 - 網頁設計
   link(rel="stylesheet" href="/assets/css/base.css")
-  link(rel="stylesheet" href="/assets/css/creative.css")
+  link(rel="stylesheet" href="/assets/css/webdesign.css")
   body.bg-dark
     include ../nav.pug
     .container.text-light
       .bg-dark-transparent.p-4
-        h1 藝創合作
+        h1 網頁設計
         p.
           從光軌創曳開始，除開發高階led表演道具、相關系統軟體，也與多位藝術家合作，協助展覽現場技術支援，包括影像同步播放技術、動態感應裝置等，
           在各個面向提供支援與建議，讓您的創作更有彈性不受技術限制。
@@ -51,7 +51,7 @@ html(lang="zh-Hant-TW")
         each val, index in _arts_data
           +modals(val, "arts", index)
           
-        .row.rwd-row.mb-5.justify-content-center
+        .row.rwd-row.mb-5
           each val, index in _arts_data
             +work(val, "arts", index)
     include ../footer.pug
