--- a/src/index.pug
+++ b/src/index.pug
@@ -18,9 +18,12 @@ html(lang="zh-Hant-TW")
     .container-fluid#about
       .row.align-items-center.justify-content-center
         .col-md-8
-          p.p-4.m-0.text-center 
-            | 「位元創意」成立於2020秋冬之際，前身為專注於led道具開發之工作室「光軌創曳」，不斷在藝術、設計與電機、資訊領域間找尋平衡，有豐富的藝創合作經驗，
-            | 主要業務為資訊整合、直播技術、展場及演出裝置設計開發等
+          .p-4.m-0.text-center 
+            h4.m-4 A bit of creativity, create bytes of memory.
+            p.m-2
+              | 「位元創意」前身為專注於led道具開發之工作室「光軌創曳」，不斷在藝術、設計與電機、資訊領域間找尋平衡，有豐富的藝創合作經驗，
+              | 主要業務為資訊整合、直播技術、展場及演出裝置設計開發等
+
       .row.align-items-center.justify-content-center
         .col-md-4.text-center.p-2
           a(href="creative")
