--- a/src/index.pug
+++ b/src/index.pug
@@ -25,12 +25,15 @@ html(lang="zh-Hant-TW")
               | 主要業務為資訊整合、直播技術、展場及演出裝置設計開發等
 
       .row.align-items-center.justify-content-center
-        .col-md-4.text-center.p-2
+        .col-md-3.text-center.p-2
           a(href="creative")
             .service-block(style="background-image: url(/assets/img/creative/longci.jpg)"): b 藝創合作
-        .col-md-4.text-center.p-2
+        .col-md-3.text-center.p-2
           a(href="livestream")
             .service-block(style="background-image: url(/assets/img/livestream/1.jpg)"): b 直播技術
+        .col-md-3.text-center.p-2
+          a(href="webdesign")
+            .service-block(style="background-image: url(/assets/img/creative/riverwatcher/1.jpg)"): b 網頁設計
           
     include footer.pug
     //script(src="/assets/js/matrix.js")
