--- a/src/webdesign/index.pug
+++ b/src/webdesign/index.pug
@@ -1,4 +1,4 @@
-- _arts_data = index['arts'].reverse()
+- _data = index['webdesign']
 - _creatives = creatives
 <!DOCTYPE html>
 html(lang="zh-Hant-TW")
@@ -12,8 +12,7 @@ html(lang="zh-Hant-TW")
       .bg-dark-transparent.p-4
         h1 網頁設計
         p.
-          從光軌創曳開始，除開發高階led表演道具、相關系統軟體，也與多位藝術家合作，協助展覽現場技術支援，包括影像同步播放技術、動態感應裝置等，
-          在各個面向提供支援與建議，讓您的創作更有彈性不受技術限制。
+          位元創意提供專業的客製化網頁設計與製作，也協助託管、代管，從前端到後端開發給您最完善的服務。
       .p-2
         mixin modals(val, cat, index)        
           .modal.fade(tabindex='-1', role='dialog', id=cat+index)
@@ -48,10 +47,10 @@ html(lang="zh-Hant-TW")
                 .img-block(style="background-image: url(/assets/img/creative/"+val['image']+"/"+_creatives[val['image']][0]+");")
                 p #{val['brief']}    
         hr
-        each val, index in _arts_data
-          +modals(val, "arts", index)
+        each val, index in _data
+          +modals(val, "webdesign", index)
           
         .row.rwd-row.mb-5
-          each val, index in _arts_data
-            +work(val, "arts", index)
+          each val, index in _data
+            +work(val, "webdesign", index)
     include ../footer.pug
