--- a/static/assets/css/webdesign.css
+++ b/static/assets/css/webdesign.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/assets/img/Mystery.png");
+  background-image: url("/assets/img/GradientWave.png");
   background-position: center;
   background-repeat: repeat;
   background-size: cover;
