--- a/src/creative/index.pug
+++ b/src/creative/index.pug
@@ -8,12 +8,13 @@ html(lang="zh-Hant-TW")
   link(rel="stylesheet" href="/assets/css/creative.css")
   body.bg-dark
     include ../nav.pug
-    .container.text-light
-      .bg-dark-transparent.p-4
+    .text-light.bg-dark-transparent
+      .container.p-5.text-center
         h1 藝創合作
         p.
           從光軌創曳開始，除開發高階led表演道具、相關系統軟體，也與多位藝術家合作，協助展覽現場技術支援，包括影像同步播放技術、動態感應裝置等，
           在各個面向提供支援與建議，讓您的創作更有彈性不受技術限制。
+    .container.text-light
       .p-2
         mixin modals(val, cat, index)        
           .modal.fade(tabindex='-1', role='dialog', id=cat+index)
