--- a/src/pug/webdesign/index.pug
+++ b/src/pug/webdesign/index.pug
@@ -1,19 +1,18 @@
-- _arts_data = index['arts'].reverse()
-- _creatives = creatives
-<!DOCTYPE html>
-html(lang="zh-Hant-TW")
-  include ../header.pug
-  title 位元創意 - 藝創合作
-  link(rel="stylesheet" href="/assets/css/base.css")
-  link(rel="stylesheet" href="/assets/css/creative.css")
-  body.bg-dark
-    include ../nav.pug
+extend ../layout.pug
+block variables
+  - title = "網頁設計"
+  - _data = index['webdesign']
+  - _creatives = creatives
+block head
+  link(rel="stylesheet" href="/assets/css/webdesign.css")
+
+block body
+  .bg-dark.bg-box
     .text-light.bg-dark-transparent
       .container.p-5.text-center
-        h1 藝創合作
+        h1= title
         p.
-          從光軌創曳開始，除開發高階led表演道具、相關系統軟體，也與多位藝術家合作，協助展覽現場技術支援，包括影像同步播放技術、動態感應裝置等，
-          在各個面向提供支援與建議，讓您的創作更有彈性不受技術限制。
+          位元創意提供專業的客製化網頁設計與製作，也協助託管、代管，從前端到後端開發給您最完善的服務。
     .container.text-light
       .p-2
         mixin modals(val, cat, index)        
@@ -22,16 +21,15 @@ html(lang="zh-Hant-TW")
               .modal-content.bg-dark.text-light
                 .modal-header
                   //h5.modal-title= val['brief']
-                  button.close(type='button', data-dismiss='modal', aria-label='Close')
-                    span(aria-hidden='true', style="color: #FFF;") ×
+                  button.btn-close(type='button' data-bs-dismiss='modal' aria-label='Close' style="filter: invert(1)")
                 .modal-body
                   .carousel.slide.carousel-fade(data-ride="carousel", id=val['image'])
                     .carousel-indicators
                       each img, index in _creatives[val['image']]
                         if index == 0
-                          li.active(data-target="#"+val['image'], data-slide-to=index)
+                          li.active(data-bs-target="#"+val['image'], data-bs-slide-to=index)
                         else
-                          li(data-target="#"+val['image'], data-slide-to=index)
+                          li(data-bs-target="#"+val['image'], data-bs-slide-to=index)
                     .carousel-inner
                       each img, index in _creatives[val['image']]
                         if index == 0
@@ -45,14 +43,13 @@ html(lang="zh-Hant-TW")
         mixin work(val, cat, index)
           .col-md-4.p-2
             .work-block.p-2.h-100
-              a(data-toggle="modal" data-target="#"+cat+index href="#")
+              a(data-bs-toggle="modal" data-bs-target="#"+cat+index href="#")
                 .img-block(style="background-image: url(/assets/img/creative/"+val['image']+"/"+_creatives[val['image']][0]+");")
                 p #{val['brief']}    
         hr
-        each val, index in _arts_data
-          +modals(val, "arts", index)
+        each val, index in _data
+          +modals(val, "webdesign", index)
           
-        .row.rwd-row.mb-5.justify-content-center
-          each val, index in _arts_data
-            +work(val, "arts", index)
-    include ../footer.pug
+        .row.rwd-row.mb-5
+          each val, index in _data
+            +work(val, "webdesign", index)
