fix livestream page

--- a/src/pug/creative/index.pug
+++ b/src/pug/creative/index.pug
@@ -5,7 +5,7 @@ block variables
   - _creatives = creatives
 
 block head
-  link(rel="stylesheet" href="/assets/css/creative.css")
+  link(rel="stylesheet" href="/assets/css/creative.css?version="+timestamp)
 
 block body
   .bg-dark.bg-box
