--- a/src/pug/livestream/index.pug
+++ b/src/pug/livestream/index.pug
@@ -2,7 +2,7 @@ extend ../layout.pug
 block variables
   - title = "直播技術"
 block head
-  link(rel="stylesheet" href="/assets/css/livestream.css")
+  link(rel="stylesheet" href="/assets/css/livestream.css?version="+timestamp)
 block body
   .bg-dark.bg-box
     .text-light.bg-dark-transparent
