--- a/src/pug/webdesign/index.pug
+++ b/src/pug/webdesign/index.pug
@@ -4,7 +4,7 @@ block variables
   - _data = index['webdesign']
   - _creatives = creatives
 block head
-  link(rel="stylesheet" href="/assets/css/webdesign.css")
+  link(rel="stylesheet" href="/assets/css/webdesign.css?version="+timestamp)
 
 block body
   .bg-dark.bg-box
