--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,7 +3,7 @@ block variables
   - _home = true
   - title = "資訊整合、攝影、直播技術、展場及演出裝置設計"
 block head
-  link(rel="stylesheet" href="/assets/css/index.css")
+  link(rel="stylesheet" href="/assets/css/index.css?version="+timestamp)
 
 block body
   //canvas#canvas Canvas is not supported in your browser.
