--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -20,8 +20,8 @@ head
     link(rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico")
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x' crossorigin='anonymous')
     link(href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;700&family=Noto+Serif+TC:wght@300;500;700&display=swap" rel="stylesheet")
-    //link(href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet")
-    link(rel="stylesheet" href="/assets/css/base.css")
+    //link(href="https://unpkg.com/aos@2.3.1/dist/aos.css?version="+timestamp rel="stylesheet")
+    link(rel="stylesheet" href="/assets/css/base.css?version="+timestamp)
     block head
 
     body(data-spy="scroll" data-bs-target=".navbar" data-offset="100")        
