--- a/src/pug/livestream/index.pug
+++ b/src/pug/livestream/index.pug
@@ -56,22 +56,22 @@ block body
           tr
             th(scope="row") 講座直播
             td 1導播、1固定鏡位、投影畫面擷取、現場音訊擷取
-            td 6,000元
+            td 8,000元
             td 4小時(內)
           tr
             th(scope="row") 活動直播
             td 1導播、2固定鏡位、投影畫面擷取、現場音訊擷取
-            td 10,000元
-            td 4小時(內)
-          tr
-            th(scope="row") 活動直播
-            td 1導播、1固定鏡位、1移動鏡位、投影畫面擷取、現場音訊擷取
-            td 14,000元
+            td 12,000元
             td 4小時(內)
           tr
             th(scope="row") 線上會議直播
+            td 1導播、線上會議畫面擷取、現場音訊擷取
+            td 10,000元
+            td 4小時(內)
+          tr
+            th(scope="row") 線上+現場會議直播
             td 1導播、1固定鏡位、線上會議畫面擷取、現場音訊擷取
-            td 18,000元
+            td 16,000元
             td 4小時(內)
           tr
             th(scope="row") 更多服務
@@ -79,5 +79,5 @@ block body
       .bg-dark-transparent.p-4
         p ※以上服務均提供直播畫面錄影，於活動結束後提供一完整錄影檔
         p ※出班人數依規模而定，基本為2人
-        p ※以上價格皆含稅並開立統一發票
+        p ※實際報價依當下聯絡為準
 
