--- a/src/sass/creative.sass
+++ b/src/sass/creative.sass
@@ -13,6 +13,7 @@
   &:hover
     background-color: rgba(0, 0, 0, 1)
     border: 1px solid #AAA
+    transform: translate(-2px, -2px)
 
   .img-block
     background-position: center
