--- a/static/assets/css/creative.css
+++ b/static/assets/css/creative.css
@@ -14,6 +14,7 @@
 .work-block:hover {
   background-color: black;
   border: 1px solid #AAA;
+  transform: translate(-2px, -2px);
 }
 .work-block .img-block {
   background-position: center;
