--- a/src/sass/base.sass
+++ b/src/sass/base.sass
@@ -44,6 +44,49 @@ h1, h2, h3, h4, h5, h6
 .rwd-row
   margin: 0 15%
 
+.work-block
+  background-color: rgba(0, 0, 0, 0.5)
+  transition: .3s
+
+  .img-block
+    background-position: center
+    background-size: cover
+    height: 0
+    width: 0
+    padding-top: 100%
+    padding-left: 100%
+    transition: .3s
+    filter: grayscale(100%)
+
+  &:hover
+    background-color: rgba(0, 0, 0, 1)
+    transform: translate(-2px, -2px)
+    filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, .5))
+    .img-block
+      filter: grayscale(0%)
+
+  p
+    margin: 1em
+    transition: .3s
+
+  &:hover a, a:hover
+    text-decoration: none
+
+.modal-header
+  border: 0
+
+.modal
+  .carousel-item
+    background-position: center
+    background-size: cover
+    height: 0
+    width: 0
+    padding-top: 56%
+    padding-left: 100%
+
+  p
+    text-align: justify
+
 @media (max-width: 992px)
   .rwd-row
     margin: 0 10%
@@ -51,3 +94,5 @@ h1, h2, h3, h4, h5, h6
 @media (max-width: 767px)
   .rwd-row
     margin: 0
+  .work-block .img-block
+    filter: grayscale(0%)
