--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -18,9 +18,9 @@ head
     meta(property="og:image" content="/assets/img/Waves.png")
     meta(name="description" content="A bit of creativity, create bytes of memory. 「位元創意」主要業務為資訊整合、系統開發、展場及演出裝置設計開發等")
     link(rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico")
-    link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x' crossorigin='anonymous')
+    link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3' crossorigin='anonymous')
     link(href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;700&family=Noto+Serif+TC:wght@300;500;700&display=swap" rel="stylesheet")
-    //link(href="https://unpkg.com/aos@2.3.1/dist/aos.css?version="+timestamp rel="stylesheet")
+    link(href="https://unpkg.com/aos@2.3.1/dist/aos.css?version="+timestamp rel="stylesheet")
     link(rel="stylesheet" href="/assets/css/base.css?version="+timestamp)
     block head
 
@@ -62,8 +62,8 @@ head
                     a sean@b1t.tw
                     
         script(src='https://code.jquery.com/jquery-3.6.0.min.js' integrity='sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=' crossorigin='anonymous')        
-        script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js' integrity='sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4' crossorigin='anonymous')
-        //script(src="https://unpkg.com/aos@2.3.1/dist/aos.js")
+        script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js' integrity='sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p' crossorigin='anonymous')
+        script(src="https://unpkg.com/aos@2.3.1/dist/aos.js")
         script.
             $(function(){
                 $('.nav-link').on('click', function(event) {
@@ -76,6 +76,8 @@ head
 
                 $(window).on('activate.bs.scrollspy', function (e,obj) {
                 });
+
+                AOS.init();
             });
 
             $(window).scroll(function(){
