--- a/src/sass/base.sass
+++ b/src/sass/base.sass
@@ -60,7 +60,8 @@ h1, h2, h3, h4, h5, h6
 
   &:hover
     background-color: rgba(0, 0, 0, 1)
-    transform: translate(-2px, -2px)
+    transition-delay: 0 !important
+    transform: translate(-2px, -2px) !important
     filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, .5))
     .img-block
       filter: grayscale(0%)
