--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -20,7 +20,7 @@ head
     link(rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico")
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3' crossorigin='anonymous')
     link(href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;700&family=Noto+Serif+TC:wght@300;500;700&display=swap" rel="stylesheet")
-    link(href="https://unpkg.com/aos@2.3.1/dist/aos.css?version="+timestamp rel="stylesheet")
+    //link(href="https://unpkg.com/aos@2.3.1/dist/aos.css?version="+timestamp rel="stylesheet")
     link(rel="stylesheet" href="/assets/css/base.css?version="+timestamp)
     block head
 
@@ -63,7 +63,7 @@ head
                     
         script(src='https://code.jquery.com/jquery-3.6.0.min.js' integrity='sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=' crossorigin='anonymous')        
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js' integrity='sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p' crossorigin='anonymous')
-        script(src="https://unpkg.com/aos@2.3.1/dist/aos.js")
+        //script(src="https://unpkg.com/aos@2.3.1/dist/aos.js")
         script.
             $(function(){
                 $('.nav-link').on('click', function(event) {
@@ -77,7 +77,7 @@ head
                 $(window).on('activate.bs.scrollspy', function (e,obj) {
                 });
 
-                AOS.init();
+                //AOS.init();
             });
 
             $(window).scroll(function(){
