--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -32,7 +32,7 @@
     .service-block
       background-position: center
       background-repeat: repeat
-      background-size: cover
+      background-size: 100%
       font-size: 2em
       height: 4em
       line-height: 4em
@@ -44,6 +44,7 @@
 
       &:hover
         opacity: 1
+        background-size: 105%
 
     a:hover
       text-decoration: none
