--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -1,28 +1,29 @@
 block variables
 doctype
 html(lang="zh-Hant-TW")
-head
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    script(async src="https://www.googletagmanager.com/gtag/js?id=G-G28VSKXZKS")
-    script.
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-G28VSKXZKS');
+    head
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        script(async src="https://www.googletagmanager.com/gtag/js?id=G-G28VSKXZKS")
+        script.
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-G28VSKXZKS');
 
-    title 位元創意 - #{title}
-    meta(charset="UTF-8")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible" content="ie=edge")
-    meta(property="og:title" content="位元創意")
-    meta(property="og:image" content="/assets/img/Waves.png")
-    meta(name="description" content="A bit of creativity, create bytes of memory. 「位元創意」主要業務為資訊整合、系統開發、展場及演出裝置設計開發等")
-    link(rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico")
-    link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3' crossorigin='anonymous')
-    link(href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;700&family=Noto+Serif+TC:wght@300;500;700&display=swap" rel="stylesheet")
-    //link(href="https://unpkg.com/aos@2.3.1/dist/aos.css?version="+timestamp rel="stylesheet")
-    link(rel="stylesheet" href="/assets/css/base.css?version="+timestamp)
-    block head
+        title 位元創意 - #{title}
+        meta(charset="UTF-8")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
+        meta(http-equiv="X-UA-Compatible" content="ie=edge")
+        meta(property="og:title" content="位元創意")
+        meta(property="og:image" content="/assets/img/Waves.png")
+        meta(name="description" content="A bit of creativity, create bytes of memory. 「位元創意」主要業務為資訊整合、系統開發、展場及演出裝置設計開發等")
+        link(rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico")
+        link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3' crossorigin='anonymous')
+        //link(href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;700&family=Noto+Serif+TC:wght@300;500;700&display=swap" rel="stylesheet")
+        script(src='//s3-ap-northeast-1.amazonaws.com/justfont-user-script/jf-64168.js')
+        //link(href="https://unpkg.com/aos@2.3.1/dist/aos.css?version="+timestamp rel="stylesheet")
+        link(rel="stylesheet" href="/assets/css/base.css?version="+timestamp)
+        block head
 
     body(data-spy="scroll" data-bs-target=".navbar" data-offset="100")        
         nav#navbar.navbar.navbar-expand-md.navbar-dark.bg-dark.sticky-top: .container-fluid
