--- a/src/sass/base.sass
+++ b/src/sass/base.sass
@@ -1,10 +1,11 @@
 body
-  font-family: 'Noto Sans TC', sans-serif
+  font-family: 'jf-jinxuanlatte', sans-serif
 
-a, h1, h2, h3, h4, h5, h6
-  font-family: 'Noto Serif TC', serif
+h1, h2, h3, h4, h5, h6
+  font-family: 'jf-jinxuan', serif
   text-decoration: none
-
+a
+  text-decoration: none
 p
   color: #FFF
 
@@ -13,6 +14,18 @@ h1, h2, h3, h4, h5, h6
 
 .bg-dark hr
   border-color: rgba(255, 255, 255, 0.2)
+
+.jf-loading body
+  opacity: 0
+  visibility: hidden
+
+.jf-active body
+  opacity: 1
+  visibility: visible
+
+.jf-inactive body
+  opacity: 1
+  visibility: visible
 
 \::-webkit-scrollbar
   width: 5px
