--- a/src/sass/base.sass
+++ b/src/sass/base.sass
@@ -15,18 +15,6 @@ h1, h2, h3, h4, h5, h6
 .bg-dark hr
   border-color: rgba(255, 255, 255, 0.2)
 
-.jf-loading body
-  opacity: 0
-  visibility: hidden
-
-.jf-active body
-  opacity: 1
-  visibility: visible
-
-.jf-inactive body
-  opacity: 1
-  visibility: visible
-
 \::-webkit-scrollbar
   width: 5px
   height: 5px
@@ -90,17 +78,13 @@ h1, h2, h3, h4, h5, h6
   border: 0
 
 .modal
-  .carousel-item
-    background-position: center
-    background-size: cover
-    height: 0
-    width: 0
-    padding-top: 56%
-    padding-left: 100%
-
+  .carousel-item img 
+      width: 100%
+      height: 100%
+      object-fit: cover
   p
     text-align: justify
-
+  
 @media (max-width: 992px)
   .rwd-row
     margin: 0 10%
