--- a/static/assets/css/base.css
+++ b/static/assets/css/base.css
@@ -23,21 +23,6 @@ h1, h2, h3, h4, h5, h6 {
   border-color: rgba(255, 255, 255, 0.2);
 }
 
-.jf-loading body {
-  opacity: 0;
-  visibility: hidden;
-}
-
-.jf-active body {
-  opacity: 1;
-  visibility: visible;
-}
-
-.jf-inactive body {
-  opacity: 1;
-  visibility: visible;
-}
-
 ::-webkit-scrollbar {
   width: 5px;
   height: 5px;
@@ -91,7 +76,7 @@ h1, h2, h3, h4, h5, h6 {
   filter: grayscale(100%);
 }
 .work-block:hover {
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   transition-delay: 0 !important;
   transform: translate(-2px, -2px) !important;
   filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.5));
@@ -111,13 +96,10 @@ h1, h2, h3, h4, h5, h6 {
   border: 0;
 }
 
-.modal .carousel-item {
-  background-position: center;
-  background-size: cover;
-  height: 0;
-  width: 0;
-  padding-top: 56%;
-  padding-left: 100%;
+.modal .carousel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .modal p {
   text-align: justify;
@@ -132,7 +114,6 @@ h1, h2, h3, h4, h5, h6 {
   .rwd-row {
     margin: 0;
   }
-
   .work-block .img-block {
     filter: grayscale(0%);
   }
