--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -50,17 +50,19 @@ html(lang="zh-Hant-TW")
 
         block body
         #footer.text-center.bg-dark.text-light.container-fluid
-            .row.py-5.justify-content-center
+            .row.pt-4.justify-content-center
                 .col-md-4
                     h5 相關連結 / Links
                     a(href="http://railustre.tw" target="_blank") 光軌創曳工作室
-                    br
-                    a(href="https://makebackground.io" target="_blank") background images are created by makebackground.io
+                    span  | 
+                    a(href="https://makebackground.io" target="_blank") makebackground.io
                 .col-md-4
                     h5 聯絡我們 / Contacts
-                    a 高任翔 | SeanGau
-                    br
-                    a sean@b1t.tw
+                    div 高任翔 | SeanGau | sean@b1t.tw
+            hr
+            .row.pb-3.text-center
+                .col.business-info 位元創意有限公司 83280864 | 本公司採用電子發票，歡迎提供載具
+
                     
         script(src='https://code.jquery.com/jquery-3.6.0.min.js' integrity='sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=' crossorigin='anonymous')        
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js' integrity='sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p' crossorigin='anonymous')
