--- a/src/sass/base.sass
+++ b/src/sass/base.sass
@@ -20,7 +20,7 @@ h1, h2, h3, h4, h5, h6
   height: 5px
 
 \::-webkit-scrollbar-track
-  background: #7F7F7F
+  background: var(--bs-gray-400)
   outline: 1px solid white
 
 \::-webkit-scrollbar-thumb
@@ -33,10 +33,10 @@ h1, h2, h3, h4, h5, h6
   width: 100%
   a
     color: white
-    margin: 5px
-    padding: 5px 10px
     &:link:hover, &:visited:hover
-      color: #DDD
+      color: var(--bs-gray-400)
+  .business-info
+    color: var(--bs-gray-200)
 
 .bg-dark-transparent
   margin: 0
