footer use gradient

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -15,7 +15,7 @@ block body
         //h4 a bit of creative, create bytes of life
 
   .container-fluid#about
-    .row.align-items-center.justify-content-center
+    .row.align-items-center.justify-content-center.pt-3
       .col-md-8
         .p-4.m-0.text-center 
           h4.m-4 A bit of creativity, create bytes of memory.
@@ -23,7 +23,7 @@ block body
             | 「位元創意」前身為專注於led道具開發之工作室「光軌創曳」，不斷在藝術、設計與電機、資訊領域間找尋平衡，有豐富的藝創合作經驗，
             | 主要業務為資訊整合、攝影、直播技術、展場及演出裝置設計開發等
 
-    .row.align-items-center.justify-content-center
+    .row.align-items-center.justify-content-center.pb-5
       .col-md-3.text-center.p-2
         a(href="creative")
           .service-block(style="background-image: url(/assets/img/creative/longci.jpg)"): b 藝創合作
