--- a/src/sass/base.sass
+++ b/src/sass/base.sass
@@ -31,6 +31,7 @@ h1, h2, h3, h4, h5, h6
 
 #footer
   width: 100%
+  background: linear-gradient(30deg, var(--bs-gray-800), var(--bs-gray-900))
   a
     color: white
     &:link:hover, &:visited:hover
