--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -20,8 +20,7 @@ block body
         .p-4.m-0.text-center 
           h4.m-4 A bit of creativity, create bytes of memory.
           p.m-2
-            | 「位元創意」前身為專注於led道具開發之工作室「光軌創曳」，不斷在藝術、設計與電機、資訊領域間找尋平衡，有豐富的藝創合作經驗，
-            | 主要業務為資訊整合、攝影、直播技術、展場及演出裝置設計開發等
+            | 位元創意有限公司，專注於藝創合作、活動直播和網站工程等領域。我們與藝術家、設計師、創作者協作，打造獨特的成果。我們提倡開源及開放的文化，接納多元，提供精心設計的客製化方案，讓您的品牌和活動在網絡世界中展現魅力。
 
     .row.align-items-center.justify-content-center.pb-5
       .col-md-3.text-center.p-2
