--- a/src/pug/creative/index.pug
+++ b/src/pug/creative/index.pug
@@ -13,8 +13,7 @@ block body
       .container.p-5.text-center
         h1 藝創合作
         p.
-          從光軌創曳開始，除開發高階led表演道具、相關系統軟體，也與多位藝術家合作，協助展覽現場技術支援，包括影像同步播放技術、動態感應裝置等，
-          在各個面向提供支援與建議，讓您的創作更有彈性不受技術限制。
+          我們積極與多位藝術家合作，提供展覽現場的技術支援服務。我們的支援範圍涵蓋影像同步播放技術與動態感應裝置，確保每個創作項目能夠不受技術限制，實現藝術家的創意與願景。我們致力於在各個面向提供專業建議與技術支援，讓您的創作過程更具彈性與自由。
     .container.text-light
       .p-2
         mixin modals(val, cat, index)        
