--- a/src/pug/livestream/index.pug
+++ b/src/pug/livestream/index.pug
@@ -9,8 +9,7 @@ block body
       .container.p-5.text-center
         h1= title
         p.
-          位元創意提供最實惠的直播技術支援服務，至今已有數十場活動、講座、線上會議直播經驗，並擁有完善的直播設備，
-          從基本的直播到完整的服務規劃，提供最全面的選擇。
+          我們擁有豐富的直播經驗，涵蓋活動、講座以及線上會議等多樣形式，並配備最先進的直播設備。我們的服務範圍從基礎的直播到全面的服務規劃，確保客戶能夠根據自身需求選擇最適合的方案。我們致力於為您打造卓越的直播體驗，以專業和可靠的技術支持，讓您的每一場直播都能夠精彩呈現。
     .container
       #carousel.carousel.slide.carousel-fade(data-ride='carousel')
         p ※以下皆為直播畫面擷取
