--- a/src/pug/webdesign/index.pug
+++ b/src/pug/webdesign/index.pug
@@ -12,7 +12,7 @@ block body
       .container.p-5.text-center
         h1= title
         p.
-          位元創意提供專業的客製化網頁設計與製作，也協助託管、代管，從前端到後端開發給您最完善的服務。
+          我們致力於滿足每一位客戶的獨特需求，不僅僅是設計與製作，我們也提供全面的網站託管與管理服務，涵蓋從前端到後端的開發。無論您是需要一個引人注目的網站還是全面的技術支持，我們都能為您提供最完善的解決方案，以專業和友善的態度確保您獲得最佳的使用體驗。
     .container.text-light
       .p-2
         mixin modals(val, cat, index)        
